--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     // Task API
     implementation "com.google.android.gms:play-services-tasks:17.0.2"
-
+    implementation 'com.google.android.material:material:1.1.0'
     // TF Lite
     implementation('org.tensorflow:tensorflow-lite:0.0.0-nightly') { changing = true }
 }
